--- a/google.html
+++ b/google.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Hello Analytics Reporting API V4</title>
-  <meta name="google-signin-client_id" content="366832698318-l6s3kd8rn7ha6vb9rskgubp9v51u0sgu.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="366832698318-vv5q3p7njtnrah9k8kqq2hoa75igkp0g.apps.googleusercontent.com">
   <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">
 </head>
 <body>
@@ -38,7 +38,7 @@
             ],
             metrics: [
               {
-                expression: 'ga:sessions'
+                expression: 'ga:entrances'
               }
             ]
           }
