--- a/google/index.html
+++ b/google/index.html
@@ -40,6 +40,11 @@
               {
                 expression: 'ga:entrances'
               }
+            ],
+            dimensions:[
+              {
+                expression: 'ga:pagePathLevel1'
+              }
             ]
           }
         ]
