--- a/google/index.html
+++ b/google/index.html
@@ -41,11 +41,7 @@
                 expression: 'ga:entrances'
               }
             ],
-            dimensions:[
-              {
-                expression: 'ga:pagePathLevel1'
-              }
-            ]
+            dimensions:['ga:pagePathLevel1']
           }
         ]
       }
