--- a/google/index.html
+++ b/google/index.html
@@ -41,7 +41,11 @@
                 expression: 'ga:entrances'
               }
             ],
-            dimensions:['ga:pagePathLevel1']
+            "dimensions": [
+              {
+                "path":"ga:pagePathLevel1"
+              }
+            ]
           }
         ]
       }
