--- a/google/index.html
+++ b/google/index.html
@@ -36,9 +36,9 @@
                 endDate: 'today'
               }
             ],
-            "dimensions": [
+            dimensions: [
               {
-                "path":"ga:pagePathLevel1"
+                name:"ga:pagePathLevel1"
               }
             ],
             metrics: [
