--- a/google/index.html
+++ b/google/index.html
@@ -14,7 +14,8 @@
 <p class="g-signin2" data-onsuccess="queryReports"></p>
 
 <!-- The API response will be printed here. -->
-<textarea cols="80" rows="20" id="query-output"></textarea>
+<div id="query-output1"></div>
+<div id="query-output2"></div>
 
 <script>
   // Replace with your view ID.
@@ -55,7 +56,18 @@
 
   function displayResults(response) {
     var formattedJson = JSON.stringify(response.result, null, 2);
-    document.getElementById('query-output').value = formattedJson;
+    var rows = formattedJson.reports[0].data.rows;
+    var rowsLabel = [];
+    var rowsValue = [];
+    for (i = 0; i < rows.length; i++) { 
+      rowsLabel[i] = rows[i].dimensions[0];
+    }
+    for (i = 0; i < rows.length; i++) { 
+      rowsValue[i] = rows[i].metrics[0].values[0];
+    }
+
+    document.getElementById('query-output1').html = rowsLabel;
+    document.getElementById('query-output2').html = rowsValue;
   }
 </script>
 
