--- a/google/index.html
+++ b/google/index.html
@@ -67,7 +67,7 @@
     }
 */
     document.getElementById('query-output1').html = '<h1>'+formattedJson.reports+'</h1>';
-    document.getElementById('query-output2').text = '<h1>'+formattedJson.reports(0)+'</h1>';
+    document.getElementById('query-output2').text = '<h1>'+formattedJson.reports+'</h1>';
   }
 </script>
 
