--- a/google/index.html
+++ b/google/index.html
@@ -56,18 +56,18 @@
 
   function displayResults(response) {
     var formattedJson = JSON.stringify(response.result, null, 2);
-    //var rows = formattedJson.reports.data.rows;
+    var rows = response.reports[0].data.rows;
     var rowsLabel;
     var rowsValue;
-/*    for (i = 0; i < rows.length; i++) { 
+    for (i = 0; i < rows.length; i++) { 
       rowsLabel[i] = rows[i].dimensions[0];
     }
     for (i = 0; i < rows.length; i++) { 
       rowsValue[i] = rows[i].metrics[0].values[0];
     }
-*/
-    document.getElementById('query-output1').value = formattedJson;
-    document.getElementById('query-output2').value = '<h1>'+formattedJson.reports+'</h1>';
+
+    document.getElementById('query-output1').value = rowsLabel;
+    document.getElementById('query-output2').value = '<h1>'+rowsValue+'</h1>';
   }
 </script>
 
