--- a/google/index.html
+++ b/google/index.html
@@ -59,18 +59,24 @@
   function displayResults(response) {
     var formattedJson = JSON.stringify(response.result, null, 2);
     var rows = response.result.reports[0].data.rows;
-    var temp;
+    var temp1;
+    var temp2;
     for (i = 0; i < rows.length; i++) { 
-      temp = JSON.stringify(rows[i].dimensions);
-      temp = temp.substring(2,temp.length-2);
-      rowsLabel[i] = temp; 
+      temp1 = JSON.stringify(rows[i].dimensions);
+      temp1 = temp1.substring(2,temp1.length-2);
+      temp2 = JSON.stringify(rows[i].metrics[0].values);
+      temp2 = temp2.substring(2,temp2.length-2);
+      if(temp1.indexOf("/realizar-paquetes") != -1){
+        i--;
+      }else{
+        rowsValue[i] = temp2;
+        rowsLabel[i] = temp1; 
+      }
     }
     console.log(rowsLabel);
 
     for (i = 0; i < rows.length; i++) { 
-      temp = JSON.stringify(rows[i].metrics[0].values);
-      temp = temp.substring(2,temp.length-2);
-      rowsValue[i] = temp;
+      
     }
     console.log(rowsValue);
 
