--- a/clientes.html
+++ b/clientes.html
@@ -32,7 +32,7 @@
         <button ng-click="nuevoCliente()" class="btn btn-primary">Agregar</button>
         <br/>
         <div class="list-group" ng-repeat="cliente in clientes">
-            <a href="clientes.php?id={{cliente._id}}" class="list-group-item">
+            <a href="clientes.php?id={{cliente.DNI}}" class="list-group-item">
                 <p class="list-group-item-heading">{{cliente.Nombre}}</p>
                 <h5 class="list-group-item-text">{{cliente.DNI}}</h5>
             </a>
